--- a/symfony/src/BW/UserBundle/Resources/views/User/sign-in.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/User/sign-in.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BWSkeletonBundle:Frontend:layout.html.twig' %}
 
-{% block content %}
+{% block content_wrap %}
     <h1>Sign In</h1>
 
     <form action="{{ path('user_sign_in_check') }}" method="post">
