--- a/symfony/src/BW/UserBundle/Resources/views/User/sign-up.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/User/sign-up.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BWSkeletonBundle:Frontend:layout.html.twig' %}
 
-{% block content %}
+{% block content_wrap %}
     <h1>Sign Up</h1>
 
     {{ form(form) }}
