--- a/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
+++ b/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
@@ -1,15 +1,13 @@
-{% extends '::base.html.twig' %}
+{% extends '@BWSkeleton/Frontend/layout.html.twig' %}
 
-{% block body -%}
-    <h1>Resource creation</h1>
+{% block content -%}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>Resource creation</h1>
 
-    {{ form(form) }}
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('resource') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+            {{ form(form) }}
+        </div>
+    </div>
+</div>
 {% endblock %}
