--- a/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
+++ b/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
@@ -1,5 +1,7 @@
 {% extends '@BWSkeleton/Frontend/layout.html.twig' %}
 
+{% block title %}Resource creation{% endblock %}
+
 {% block content -%}
 <div class="container">
     <div class="row">
