--- a/symfony/src/BW/MainBundle/Resources/views/Main/about.html.twig
+++ b/symfony/src/BW/MainBundle/Resources/views/Main/about.html.twig
@@ -1,5 +1,7 @@
 {% extends 'BWSkeletonBundle:Frontend:layout.html.twig' %}
 
+{% block title %}About{% endblock %}
+
 {% block content_wrap %}
     <div class="container">
         <div class="row">
