--- a/symfony/src/BW/MainBundle/Resources/views/Main/home.html.twig
+++ b/symfony/src/BW/MainBundle/Resources/views/Main/home.html.twig
@@ -1,10 +1,13 @@
 {% extends 'BWSkeletonBundle:Frontend:layout.html.twig' %}
 
+{% block title %}Home page{% endblock %}
+
 {% block content_wrap %}
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <h1>Home page</h1>
+                <p>Welcome!</p>
             </div>
         </div>
     </div>
