--- a/symfony/src/BW/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,6 +1,12 @@
-{% extends '@BWSkeleton/Frontend/layout.html.twig' %}
+{% extends 'BWSkeletonBundle:Frontend:layout.html.twig' %}
 
-{% block content -%}
-    <h1>Profile</h1>
-    {{ form(form) }}
+{% block content_wrap %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Profile</h1>
+                {{ form(form) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
