--- a/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
+++ b/symfony/src/BW/BlogBundle/Resources/views/Resource/new.html.twig
@@ -5,10 +5,10 @@
 {% block content -%}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-4 col-lg-offset-4">
             <h1>Resource creation</h1>
 
-            {{ form(form) }}
+            {% include 'BWBlogBundle:Resource:form.html.twig' %}
         </div>
     </div>
 </div>
