--- a/symfony/src/BW/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/Profile/edit.html.twig
@@ -3,9 +3,28 @@
 {% block content_wrap %}
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h1>Profile</h1>
-                {{ form(form) }}
+            <div class="col-lg-4 col-lg-offset-4">
+                <h1>User Profile</h1>
+
+                {{ form_start(form) }}
+
+                <div class="form-group">
+                    {{ form_row(form.surname) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_row(form.name) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_row(form.patronymic) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_row(form.phone) }}
+                </div>
+
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
