--- a/symfony/src/BW/UserBundle/Resources/views/User/sign-in.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/User/sign-in.html.twig
@@ -5,22 +5,22 @@
 {% block content_wrap %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-4 col-lg-offset-4">
             <h1>Sign In</h1>
 
             <form action="{{ path('user_sign_in_check') }}" method="post">
                 {% if error %}
-                    <div>{{ error.message }}</div>
+                    <div class="alert alert-danger">{{ error.message }}</div>
                 {% endif %}
 
-                <div>
+                <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                    <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" />
                 </div>
 
-                <div>
+                <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="_password" />
+                    <input class="form-control" type="password" id="password" name="_password" />
                 </div>
 
                 {#
@@ -29,12 +29,12 @@
                     <input type="hidden" name="_target_path" value="/account" />
                 #}
 
-                <div>
-                    <button type="submit">login</button>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Sign in</button>
                 </div>
             </form>
 
-            <div>
+            <div class="form-group">
                 No account yet? <a href="{{ path('user_sign_up') }}">Sign up</a>!
             </div>
         </div>
