--- a/symfony/src/BW/UserBundle/Resources/views/User/sign-up.html.twig
+++ b/symfony/src/BW/UserBundle/Resources/views/User/sign-up.html.twig
@@ -5,12 +5,26 @@
 {% block content_wrap %}
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-4 col-lg-offset-4">
             <h1>Sign Up</h1>
 
-            {{ form(form) }}
+            {{ form_start(form) }}
 
-            <div>
+            <div class="form-group">
+                {{ form_row(form.username) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_row(form.password) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_row(form.email) }}
+            </div>
+
+            {{ form_end(form) }}
+
+            <div class="form-group">
                 Already has account? <a href="{{ path('user_sign_in') }}">Sign in</a>!
             </div>
         </div>
