Create App bundle

--- a/php-symfony-1/app/Resources/views/base.html.twig
+++ b/php-symfony-1/app/Resources/views/base.html.twig
@@ -7,6 +7,23 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <ul>
+            <li>
+                <a href="{{ path('home') }}">Home</a>
+            </li>
+            <li>
+                <a href="{{ path('post') }}">Posts</a>
+            </li>
+            <li>
+                <a href="{{ path('category') }}">Categories</a>
+            </li>
+            <li>
+                <a href="{{ path('comment') }}">Comments</a>
+            </li>
+            <li>
+                <a href="{{ path('user') }}">Users</a>
+            </li>
+        </ul>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
