Generate CRUD operations

--- a/php-symfony-1/app/Resources/views/base.html.twig
+++ b/php-symfony-1/app/Resources/views/base.html.twig
@@ -12,6 +12,20 @@
                 <a href="{{ path('home') }}">Home</a>
             </li>
             <li>
+                <a href="{{ path('project') }}">Project Manager</a>
+                <ul>
+                    <li>
+                        <a href="{{ path('project') }}">Projects</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('status') }}">Statuses</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('user') }}">Users</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <a href="{{ path('post') }}">Posts</a>
             </li>
             <li>
