--- a/php-symfony-1/src/BU/ProjectBundle/Resources/views/Project/index.html.twig
+++ b/php-symfony-1/src/BU/ProjectBundle/Resources/views/Project/index.html.twig
@@ -10,6 +10,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Budget</th>
+                <th>Status</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -19,7 +20,8 @@
                 <td><a href="{{ path('project_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>{{ entity.description }}</td>
-                <td>{{ entity.budget }}</td>
+                <td>{{ entity.budget }}$</td>
+                <td>{{ entity.status ? entity.status.name : '~' }}</td>
                 <td>
                 <ul>
                     <li>
